<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".fragments.LugarDetallesFragment">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:fontFamily="@font/montserrat_medium"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/hello_blank_fragment" />
    <ImageView
        android:adjustViewBounds="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/foto_mapa"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="16sp"
        android:text="@string/label_leyenda"
        />
    <TextView
        android:id="@+id/leyenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="16sp"
        android:text="@string/label_descripcion"
        />
    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="16sp"
        android:text="@string/label_importante"
        />
    <TextView
        android:id="@+id/importante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans"
        />


</LinearLayout>